<resources>
    <string name="app_name">Calculator</string>
    <string name="button_1" translatable="false">1</string>
    <string name="button_2" translatable="false">2</string>
    <string name="button_3" translatable="false">3</string>
    <string name="button_4" translatable="false">4</string>
    <string name="button_5" translatable="false">5</string>
    <string name="button_6" translatable="false">6</string>
    <string name="button_7" translatable="false">7</string>
    <string name="button_8" translatable="false">8</string>
    <string name="button_9" translatable="false">9</string>
    <string name="button_0" translatable="false">0</string>
    <string name="button_point" translatable="false">.</string>
    <string name="button_multiplication" translatable="false">x</string>
    <string name="button_division" translatable="false">/</string>
    <string name="button_subtraction" translatable="false">-</string>
    <string name="button_summation" translatable="false">+</string>
    <string name="button_equally" translatable="false">=</string>
    <string name="button_C" translatable="false">C</string>
    <string name="button_backspace" translatable="false">◄</string>
    <string name="button_percent" translatable="false">%</string>
    <string name="enter_number">Enter number</string>
    <string name="dark_theme_check_button">Dark theme</string>
</resources>