<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/cloud" />


    <EditText
        android:id="@+id/decimal_number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_margin="20dp"
        android:ems="10"
        android:gravity="bottom|end"
        android:hint="@string/enter_number"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|numberDecimal"
        android:textSize="@dimen/button_text"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decimal_number_edit_text">

        <Button
            android:id="@+id/clear_button"
            style="@style/CalcButtonsStyle.Sign"
            android:text="@string/button_C" />

        <Button
            android:id="@+id/backspace_button"
            style="@style/CalcButtonsStyle.Sign"
            android:text="@string/button_backspace" />

        <Button
            android:id="@+id/percent_button"
            style="@style/CalcButtonsStyle.Sign"
            android:text="@string/button_percent" />

        <Button
            android:id="@+id/division_button"
            style="@style/CalcButtonsStyle.Sign"
            android:text="@string/button_division" />

        <Button
            android:id="@+id/digit_seven_button"
            style="@style/CalcButtonsStyle"
            android:text="@string/button_7" />

        <Button
            android:id="@+id/digit_eight_button"
            style="@style/CalcButtonsStyle"
            android:text="@string/button_8" />

        <Button
            android:id="@+id/digit_nine_button"
            style="@style/CalcButtonsStyle"
            android:text="@string/button_9" />

        <Button
            android:id="@+id/multiplication_button"
            style="@style/CalcButtonsStyle.Sign"
            android:text="@string/button_multiplication" />

        <Button
            android:id="@+id/digit_four_button"
            style="@style/CalcButtonsStyle"
            android:text="@string/button_4" />

        <Button
            android:id="@+id/digit_five_button"
            style="@style/CalcButtonsStyle"
            android:text="@string/button_5" />

        <Button
            android:id="@+id/digit_six_button"
            style="@style/CalcButtonsStyle"
            android:text="@string/button_6" />

        <Button
            android:id="@+id/subtraction_button"
            style="@style/CalcButtonsStyle.Sign"
            android:text="@string/button_subtraction" />

        <Button
            android:id="@+id/digit_one_button"
            style="@style/CalcButtonsStyle"
            android:text="@string/button_1" />

        <Button
            android:id="@+id/digit_two_button"
            style="@style/CalcButtonsStyle"
            android:text="@string/button_2" />

        <Button
            android:id="@+id/digit_three_button"
            style="@style/CalcButtonsStyle"
            android:text="@string/button_3" />

        <Button
            android:id="@+id/summation_button"
            style="@style/CalcButtonsStyle.Sign"
            android:text="@string/button_summation" />

        <Button
            android:id="@+id/digit_zero_button"
            style="@style/CalcButtonsStyle"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:text="@string/button_0" />

        <Button
            android:id="@+id/point_button"
            style="@style/CalcButtonsStyle"
            android:text="@string/button_point" />

        <Button
            android:id="@+id/equally_button"
            style="@style/CalcButtonsStyle.Sign"
            android:text="@string/button_equally" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>